kubernetes/apps/pulse/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pulse-service
  namespace: pulse
  labels:
    app: pulse
spec:
  type: ClusterIP
  selector:
    app: pulse
  ports:
    - name: http
      port: 4002
      targetPort: 4002
      protocol: TCP
